<resources>
    <string name="app_name">CamControl</string>
    <!--听写-->
    <string name="text_begin">请开始说话…</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_begin_ise">开始音频流评测</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="text_show_contacts">上传词表显示</string>
    <string name="text_show_iat_result">听写结果显示</string>

    <!--界面-->
    <string name="text_standing_by">正在等待命令</string>
    <string name="text_listen">发出命令</string>
    <string name="text_commands">(开始跟踪、停止跟踪)</string>
    
    <string name="text_manual_test">手动测试</string>
    <string name="text_start">开始跟踪</string>
    <string name="text_stop">停止跟踪</string>
    <string name="text_shut_down">强制停止</string>
    <string name="text_test">测试</string>
    <string name="text_connect">连接设备</string>

</resources>