<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="-60dp">

        <TextView
            android:id="@+id/txt_voice_result"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_standing_by"
            android:gravity="center"
            android:textSize="23sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_commands"
            android:textSize="19sp"
            />
        <Button
            android:id="@+id/btn_listen"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/btn_listen"
            />
        <Button
            android:id="@+id/btn_connect"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@color/main_blue1"
            android:text="@string/text_connect"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/text_manual_test"
            android:textSize="19sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30pt"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">
            <Button
                android:id="@+id/btn_start"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@color/main_blue4"
                android:text="@string/text_start"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/btn_stop"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@color/main_blue4"
                android:text="@string/text_stop"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_test"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@color/main_blue4"
            android:text="@string/text_test"
            android:textColor="@color/white" />

    </LinearLayout>



</FrameLayout>